--- a/index.html
+++ b/index.html
@@ -261,31 +261,31 @@
 
         <div class="agenda-item">
             <div class="time">09:00</div>
-            <div class="session-title">Keynote: Explainable Attribution Technology and its Application in Autonomous Agent Reliability</div>
+            <div class="session-title">Keynote: Reliable Visual-Language Grounding for Embodied AI Agents</div>
             <div class="speaker-info">
-                Prof. Xiaochun Cao<br>
-                <em>Sun Yat-sen University</em><br>
-                <a href="https://scst.sysu.edu.cn/members/caoxiaochun.htmh">Homepage</a>
+                Prof. Lorenzo Baraldi<br>
+                <em>University of Modena and Reggio Emilia</em><br>
+                <a href="https://www.lorenzobaraldi.com/">Homepage</a>
             </div>
         </div>
 
         <div class="agenda-item">
             <div class="time">10:00</div>
-            <div class="session-title">Invited Talk: Probabilistic Verification of AI Agents</div>
+            <div class="session-title">Invited Talk: The Importance of Starting Small with Baby Robots: Developmental Robotics for Language Grounding</div>
             <div class="speaker-info">
-                Dr. Xingyu Zhao<br>
-                <em>University of Warwick</em><br>
-                <a href="https://www.xzhao.me/">Homepage</a>
+                Prof. Angelo Cangelosi<br>
+                <em>University of Manchester</em><br>
+                <a href="https://research.manchester.ac.uk/en/persons/angelo.cangelosi">Homepage</a>
             </div>
         </div>
 
         <div class="agenda-item">
             <div class="time">11:00</div>
-            <div class="session-title">Invited Talk: Bridging the Gap between Interpretable AI Research and Real World AI Agents</div>
+            <div class="session-title">Invited Talk: Probabilistic Verification of AI Agents</div>
             <div class="speaker-info">
-                Dr. Ziquan Liu<br>
-                <em>Queen Mary University of London</em><br>
-                <a href="https://sites.google.com/view/ziquanliu">Homepage</a>
+                Dr. Xingyu Zhao<br>
+                <em>University of Warwick</em><br>
+                <a href="https://www.xzhao.me/">Homepage</a>
             </div>
         </div>
 
@@ -297,11 +297,11 @@
 
         <div class="agenda-item">
             <div class="time">13:30</div>
-            <div class="session-title">Invited Talk: The Importance of Starting Small with Baby Robots: Developmental Robotics for Language Grounding</div>
+            <div class="session-title">Invited Talk: Bridging the Gap between Interpretable AI Research and Real World AI Agents</div>
             <div class="speaker-info">
-                Prof. Angelo Cangelosi<br>
-                <em>University of Manchester</em><br>
-                <a href="https://research.manchester.ac.uk/en/persons/angelo.cangelosi">Homepage</a>
+                Dr. Ziquan Liu<br>
+                <em>Queen Mary University of London</em><br>
+                <a href="https://sites.google.com/view/ziquanliu">Homepage</a>
             </div>
         </div>
 
