--- a/index.html
+++ b/index.html
@@ -307,11 +307,11 @@
 
         <div class="agenda-item">
             <div class="time">14:20</div>
-            <div class="session-title">Invited Talk: Reliable Visual-Language Grounding for Embodied AI Agents</div>
+            <div class="session-title">Invited Talk: Multi-robot Control Using Bayesian Machine Learning.</div>
             <div class="speaker-info">
-                Prof. Lorenzo Baraldi<br>
-                <em>University of Modena and Reggio Emilia</em><br>
-                <a href="https://www.lorenzobaraldi.com/">Homepage</a>
+                Prof. Wei Pan<br>
+                <em>University of Manchester</em><br>
+                <a href="https://panweihit.github.io/">Homepage</a>
             </div>
         </div>
 
@@ -323,22 +323,22 @@
 
         <div class="agenda-item">
             <div class="time">15:30</div>
-            <div class="session-title">Invited Talk: Multi-robot Control Using Bayesian Machine Learning.</div>
+            <div class="session-title">Invited Talk: Towards Cooperative AI Agents.</div>
             <div class="speaker-info">
-                Prof. Wei Pan<br>
-                <em>University of Manchester</em><br>
-                <a href="https://panweihit.github.io/">Homepage</a>
+                Prof. Yali Du<br>
+                <em>King's College London</em><br>
+                <a href="https://yalidu.github.io/">Homepage</a>
             </div>
         </div>
 
-        <div class="agenda-item">
+<!--         <div class="agenda-item">
             <div class="time">16:30</div>
             <div class="session-title">Panel Discussion: Challenges and Opportunities in the Era of Large Language Models</div>
             <div class="speaker-info">
                 Moderator: Dr. Qunli Zhang<br>
                 Panelists: All Invited Speakers
             </div>
-        </div>
+        </div> -->
 
         <div class="agenda-item">
             <div class="time">17:00</div>
