--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 
         <div class="agenda-item">
             <div class="time">13:30</div>
-            <div class="session-title">Invited Talk: Bridging the Gap between Interpretable AI Research and Real World AI Agents</div>
+            <div class="session-title">Invited Talk: Uncertainty Quantification in the Era of LLM-Based Agents</div>
             <div class="speaker-info">
                 Dr. Ziquan Liu<br>
                 <em>Queen Mary University of London</em><br>
