--- a/index.html
+++ b/index.html
@@ -254,13 +254,13 @@
         <h2>Agenda (Tentative)</h2>
         
         <div class="agenda-item">
-            <div class="time">08:45</div>
+            <div class="time">09:00</div>
             <div class="session-title">Welcome & Opening Remarks</div>
             <div class="speaker-info">Dr. Zheng Hu</div>
         </div>
 
         <div class="agenda-item">
-            <div class="time">09:00</div>
+            <div class="time">09:15</div>
             <div class="session-title">Keynote: Reliable Visual-Language Grounding for Embodied AI Agents</div>
             <div class="speaker-info">
                 Prof. Lorenzo Baraldi<br>
@@ -270,7 +270,7 @@
         </div>
 
         <div class="agenda-item">
-            <div class="time">10:00</div>
+            <div class="time">10:15</div>
             <div class="session-title">Invited Talk: The Importance of Starting Small with Baby Robots: Developmental Robotics for Language Grounding</div>
             <div class="speaker-info">
                 Prof. Angelo Cangelosi<br>
@@ -280,7 +280,7 @@
         </div>
 
         <div class="agenda-item">
-            <div class="time">11:00</div>
+            <div class="time">11:15</div>
             <div class="session-title">Invited Talk: Probabilistic Verification of AI Agents</div>
             <div class="speaker-info">
                 Dr. Xingyu Zhao<br>
@@ -306,7 +306,7 @@
         </div>
 
         <div class="agenda-item">
-            <div class="time">14:20</div>
+            <div class="time">14:10</div>
             <div class="session-title">Invited Talk: Multi-robot Control Using Bayesian Machine Learning.</div>
             <div class="speaker-info">
                 Prof. Wei Pan<br>
@@ -316,13 +316,13 @@
         </div>
 
         <div class="agenda-item">
-            <div class="time">15:20</div>
-            <div class="session-title">Coffee Break</div>
+            <div class="time">15:10</div>
+            <div class="session-title">Short Break</div>
             <div class="speaker-info"></div>
         </div>
 
         <div class="agenda-item">
-            <div class="time">15:30</div>
+            <div class="time">15:25</div>
             <div class="session-title">Invited Talk: Towards Cooperative AI Agents.</div>
             <div class="speaker-info">
                 Prof. Yali Du<br>
