--- a/index.html
+++ b/index.html
@@ -270,13 +270,19 @@
         </div>
 
         <div class="agenda-item">
-            <div class="time">10:15</div>
-            <div class="session-title">Invited Talk: The Importance of Starting Small with Baby Robots: Developmental Robotics for Language Grounding</div>
+            <div class="time">10:00</div>
+            <div class="session-title">Invited Talk: Uncertainty Quantification in the Era of LLM-Based Agents</div>
             <div class="speaker-info">
-                Prof. Angelo Cangelosi<br>
-                <em>University of Manchester</em><br>
-                <a href="https://research.manchester.ac.uk/en/persons/angelo.cangelosi">Homepage</a>
+                Dr. Ziquan Liu<br>
+                <em>Queen Mary University of London</em><br>
+                <a href="https://sites.google.com/view/ziquanliu">Homepage</a>
             </div>
+        </div>
+
+        <div class="agenda-item">
+            <div class="time">10:45</div>
+            <div class="session-title">Coffee Break</div>
+            <div class="speaker-info"></div>
         </div>
 
         <div class="agenda-item">
@@ -297,11 +303,11 @@
 
         <div class="agenda-item">
             <div class="time">13:30</div>
-            <div class="session-title">Invited Talk: Uncertainty Quantification in the Era of LLM-Based Agents</div>
+            <div class="session-title">Invited Talk: The Importance of Starting Small with Baby Robots: Developmental Robotics for Language Grounding</div>
             <div class="speaker-info">
-                Dr. Ziquan Liu<br>
-                <em>Queen Mary University of London</em><br>
-                <a href="https://sites.google.com/view/ziquanliu">Homepage</a>
+                Prof. Angelo Cangelosi<br>
+                <em>University of Manchester</em><br>
+                <a href="https://research.manchester.ac.uk/en/persons/angelo.cangelosi">Homepage</a>
             </div>
         </div>
 
@@ -341,7 +347,7 @@
         </div> -->
 
         <div class="agenda-item">
-            <div class="time">17:00</div>
+            <div class="time">16:10</div>
             <div class="session-title">Closing Remarks</div>
             <div class="speaker-info">
                 Dr. Xiao Chen<br>
