--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         <div class="agenda-item">
             <div class="time">09:00</div>
             <div class="session-title">Welcome & Opening Remarks</div>
-            <div class="speaker-info">Dr. Zheng Hu</div>
+<!--             <div class="speaker-info">Dr. Zheng Hu</div> -->
         </div>
 
         <div class="agenda-item">
@@ -349,9 +349,9 @@
         <div class="agenda-item">
             <div class="time">16:10</div>
             <div class="session-title">Closing Remarks</div>
-            <div class="speaker-info">
+<!--             <div class="speaker-info">
                 Dr. Xiao Chen<br>
-            </div>
+            </div> -->
         </div>
 
         
