--- a/index.html
+++ b/index.html
@@ -254,13 +254,17 @@
         <h2>Agenda (Tentative)</h2>
         
         <div class="agenda-item">
-            <div class="time">09:00</div>
+            <div class="time">09:15</div>
             <div class="session-title">Welcome & Opening Remarks</div>
-<!--             <div class="speaker-info">Dr. Zheng Hu</div> -->
+            <div class="speaker-info">
+                Dr. Qunli Zhang<br>
+                <em>Huawei RAMS Lab</em><br>
+            </div> -->
+            
         </div>
 
         <div class="agenda-item">
-            <div class="time">09:15</div>
+            <div class="time">09:20</div>
             <div class="session-title">Keynote: Reliable Visual-Language Grounding for Embodied AI Agents</div>
             <div class="speaker-info">
                 Prof. Lorenzo Baraldi<br>
@@ -270,7 +274,7 @@
         </div>
 
         <div class="agenda-item">
-            <div class="time">10:00</div>
+            <div class="time">10:05</div>
             <div class="session-title">Invited Talk: Uncertainty Quantification in the Era of LLM-Based Agents</div>
             <div class="speaker-info">
                 Dr. Ziquan Liu<br>
@@ -280,7 +284,7 @@
         </div>
 
         <div class="agenda-item">
-            <div class="time">10:45</div>
+            <div class="time">10:50</div>
             <div class="session-title">Coffee Break</div>
             <div class="speaker-info"></div>
         </div>
@@ -349,8 +353,10 @@
         <div class="agenda-item">
             <div class="time">16:10</div>
             <div class="session-title">Closing Remarks</div>
-<!--             <div class="speaker-info">
-                Dr. Xiao Chen<br>
+            <div class="speaker-info">
+                Dr. Ziquan Liu<br>
+                <em>Queen Mary University of London</em><br>
+<!--                 <a href="https://sites.google.com/view/ziquanliu">Homepage</a>
             </div> -->
         </div>
 
