--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <div class="session-title">Welcome & Opening Remarks</div>
             <div class="speaker-info">
                 Dr. Qunli Zhang<br>
-                <em>Huawei RAMS Lab</em><br>
+                <em>Huawei RAMS Lab</em>
             </div> -->
             
         </div>
@@ -355,9 +355,8 @@
             <div class="session-title">Closing Remarks</div>
             <div class="speaker-info">
                 Dr. Ziquan Liu<br>
-                <em>Queen Mary University of London</em><br>
-<!--                 <a href="https://sites.google.com/view/ziquanliu">Homepage</a>
-            </div> -->
+                <em>Queen Mary University of London</em>
+            </div>
         </div>
 
         
