--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
     </section>
 
     <section class="section" id="agenda">
-        <h2>Agenda (Tentative)</h2>
+        <h2>Agenda</h2>
         
         <div class="agenda-item">
             <div class="time">09:15</div>
