--- a/index.html
+++ b/index.html
@@ -259,8 +259,7 @@
             <div class="speaker-info">
                 Dr. Qunli Zhang<br>
                 <em>Huawei RAMS Lab</em>
-            </div> -->
-            
+            </div>
         </div>
 
         <div class="agenda-item">
